# pqa-web

./: .gitignore  .vercelignore  README.md  agenda.md  next.config.mjs  package.json  pnpm-lock.yaml  vercel.json
api/: app.py  prompts.py  pyproject.toml  requirements.txt  settings.py
backend/: app.py  settings.py
components/: chat-interface.tsx
